# GumshoeNESRecomp

./: .gitignore  .gitmodules  CMakeLists.txt  CODEX_AUDIT_BY_CLAUDE.md  CODEX_SUMMARY.md  GUMSHOE_MENU_AUTOADVANCE.md  ISSUES.md  README.md  RELEASE.md  SESSION_HANDOFF.md  SUMMARY_2026-04-12.md  boxart.tga  extras.c  game.toml  gumshoe_finder_audit.csv  nesrecomp.pin  recomp_stack.c  recomp_stack.h  setup.bat  setup.sh  tcp_follow_26.py  tcp_follow_continue.py  tcp_follow_dump.py  tcp_follow_dump2.py  tcp_follow_install.py  tcp_hit_retro.py  tcp_hit_trace.py  tcp_pause_then_follow.py  verify_mode.c  verify_mode.h
.github/workflows/: release.yml
scripts/: release-mac.sh
tests/: test.config.json
tools/: build-linux.sh  build-macos.sh  make_release.ps1
